--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
 
+:root {
+  --primary: #166ae8;
+}
+
 body {
   background: #f2f2f2;
   color: #333;
@@ -24,6 +28,37 @@ nav {
 nav a {
   margin-left: 12px;
 }
+
+/* nav {
+  margin: 20px auto 40px;
+  display: flex;
+  align-items: center;
+} */
+nav h1 {
+  margin-left: 10px;
+}
+nav ul {
+  margin-left: auto;
+  list-style-type: none;
+  padding: 0;
+}
+nav li {
+  display: inline-block;
+  margin-left: 16px;
+}
+nav li.btn {
+  padding: 10px 16px;
+  border: 2px solid var(--primary);
+  border-radius: 30px;
+  font-weight: 600;
+  color: var(--primary);
+  cursor: pointer;
+}
+nav li.btn:hover {
+  color: white;
+  background: var(--primary);
+}
+
 nav .logo {
   margin-right: auto;
 }
