failing to fetch questions for one category

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,4 +17,15 @@
   text-align: center;
 }
 
+.btn1 {
+  display: block;
+  width: 150px;
+  padding: 8px 0;
+  margin: 20px auto;
+  background: #4979ff;
+  border-radius: 4px;
+  color: white;
+  text-align: center;
+}
+
 /* only use classes in this file */
