--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,9 +65,9 @@ nav .logo {
 footer {
   display: block;
   text-align: center;
-  padding: 30px 0;
+  padding: 50px 0;
   margin-top: 60px;
-  color: #777;
+  /* color: #777; */
   border-top: 1px solid #eaeaea;
 }
 
