--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,7 +17,7 @@
   text-align: center;
 }
 
-.btn1 {
+/* .btn1 {
   display: block;
   width: 150px;
   padding: 8px 0;
@@ -28,12 +28,98 @@
   text-align: center;
 }
 
+.btn1:hover {
+
+} */
+
+/* .landing_page {
+
+} */
+.btn1{
+  display: block;
+  width: 150px;
+  padding: 8px 0;
+  margin: 20px auto;
+  text-align: center;
+  right: 20px;
+  bottom: 20px;
+  border:none;
+  box-shadow: none;
+  width: 130px;
+  height: 40px;
+  line-height: 42px;
+  -webkit-perspective: 230px;
+  perspective: 230px;
+  color: #ffffff;
+}
+.btn1 span {
+  background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
+  display: block;
+  position: absolute;
+  width: 130px;
+  height: 40px;
+  box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+  7px 7px 20px 0px rgba(0,0,0,.1),
+  4px 4px 5px 0px rgba(0,0,0,.1);
+  border-radius: 5px;
+  margin:0;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+.btn1 span:nth-child(1) {
+  box-shadow:
+  -7px -7px 20px 0px #fff9,
+  -4px -4px 5px 0px #fff9,
+  7px 7px 20px 0px #0002,
+  4px 4px 5px 0px #0001;
+  -webkit-transform: rotateX(90deg);
+  -moz-transform: rotateX(90deg);
+  transform: rotateX(90deg);
+  -webkit-transform-origin: 50% 50% -20px;
+  -moz-transform-origin: 50% 50% -20px;
+  transform-origin: 50% 50% -20px;
+}
+.btn1 span:nth-child(2) {
+  -webkit-transform: rotateX(0deg);
+  -moz-transform: rotateX(0deg);
+  transform: rotateX(0deg);
+  -webkit-transform-origin: 50% 50% -20px;
+  -moz-transform-origin: 50% 50% -20px;
+  transform-origin: 50% 50% -20px;
+}
+.btn1:hover span:nth-child(1) {
+  box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+  7px 7px 20px 0px rgba(0,0,0,.1),
+  4px 4px 5px 0px rgba(0,0,0,.1);
+  -webkit-transform: rotateX(0deg);
+  -moz-transform: rotateX(0deg);
+  transform: rotateX(0deg);
+}
+.btn1:hover span:nth-child(2) {
+  box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+  7px 7px 20px 0px rgba(0,0,0,.1),
+  4px 4px 5px 0px rgba(0,0,0,.1);
+  color: transparent;
+  -webkit-transform: rotateX(-90deg);
+  -moz-transform: rotateX(-90deg);
+  transform: rotateX(-90deg);
+}
+
+
+
 .cate_container {
-  /* border: 1px solid red; */
+  border: 1px solid red;
   /* display: flex; */
   flex-wrap: wrap;
-  justify-content:center; 
+  justify-content:space-around; 
   columns: 3 auto;
+  
+  /* position: absolute; */
+  
 }
 
 .cate_page_title {
@@ -44,10 +130,17 @@
 }
 
 .quiz_item {
-  /* border: 1px solid green; */
-  padding: 20px;
-  text-align: center;
-  border-radius: 4px;
+border: 1em solid #f2f2f2;
+padding: 20px;
+text-align: center;
+border-radius: 4px;
+box-sizing: border-box;
+min-height: 200px;
+max-height: 200px;
+line-height: 2.5ex;
+/* background-color: pink; */
+
+
 }
 
 .question_wrap {
