--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,18 +63,45 @@ nav .logo {
   margin-right: auto;
 }
 
+/* footer */
+.footer {
+  text-align: center;
+  padding: 2.5em 0;
+  font-size: 2.25rem;
+  padding: 50px 0;
+  margin-top: 60px;
+
+}
+
+.social-list-item:hover {
+  opacity: .7;
+}
+
+.social-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2em 0 0;
+  padding: 40px;
+  border-top: 1px solid #eaeaea;
+  
+}
+
+.social-list-item {
+  margin: 0 .5em; 
+}
+
 h3 {
   font-size: 18px;
   min-height: 36px;
 }
 
-footer {
+footer p {
   display: block;
   text-align: center;
-  padding: 50px 0;
-  margin-top: 60px;
-  /* color: #777; */
-  border-top: 1px solid #eaeaea;
+  font-size: 0.6em;
+  color: #777
 }
 
 
