--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,35 +6,159 @@
 .text {
   color: #777;
 }
+
+
+.landing_page{
+  border: 1px solid red;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-around; 
+}
+
+
+#tagline {
+  width: 300px;
+  font-size: 36px;
+  line-height: 40px;
+  height: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -15px;
+  margin-left: -150px;
+  text-align: center;
+}
+#tagline:before {
+  content: '[';
+  position: absolute;
+  left: -30px;
+  line-height: 40px;
+}
+#tagline:after {
+  content: ']';
+  position: absolute;
+  right: -30px;
+  line-height: 40px;
+}
+#tagline:after,
+#tagline:before {
+  color: black;
+  font-size: 42px;
+  animation-name:				opacity;
+  animation-duration:			12s;
+  animation-delay:				0s;
+  animation-iteration-count: 	infinite;
+}
+.visible {
+  display:inline-block;
+  font-weight: 600;
+  overflow: hidden;
+  height: 40px;
+}
+.visible ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  animation-name:				change;
+  animation-duration:			12s;
+  animation-delay:				0s;
+  animation-iteration-count: 	infinite;
+}
+.visible ul li {
+  line-height: 40px;
+  margin: 0;
+}
+@-webkit-keyframes opacity {
+	0%		{opacity: 1}
+	18%		{opacity: 1}
+
+	23%		{opacity: 0}
+	25%		{opacity: 1}
+	40%		{opacity: 1}
+	42%		{opacity: 0}
+
+	48%		{opacity: 0}
+	50%		{opacity: 1}
+	65%		{opacity: 1}
+	67%		{opacity: 0}
+	
+	73%		{opacity: 0}
+	75%		{opacity: 1}
+	85%		{opacity: 1}
+	87%		{opacity: 0}
+	
+	93%		{opacity: 0}
+	95%		{opacity: 1}
+	100%	{opacity: 1}
+}
+@keyframes opacity {
+	0%		{opacity: 1}
+	18%		{opacity: 1}
+
+	23%		{opacity: 0}
+	25%		{opacity: 1}
+	40%		{opacity: 1}
+	42%		{opacity: 0}
+
+	48%		{opacity: 0}
+	50%		{opacity: 1}
+	65%		{opacity: 1}
+	67%		{opacity: 0}
+	
+	73%		{opacity: 0}
+	75%		{opacity: 1}
+	85%		{opacity: 1}
+	87%		{opacity: 0}
+	
+	93%		{opacity: 0}
+	95%		{opacity: 1}
+	100%	{opacity: 1}
+}
+@-webkit-keyframes change {
+	0%		{margin-top: 0;}
+	15%		{margin-top: 0;}
+	25%		{margin-top: -40px;}
+	40%		{margin-top: -40px;}
+	50%		{margin-top: -80px;}
+	65%		{margin-top: -80px;}
+	75%		{margin-top: -40px;}
+	85%		{margin-top: -40px;}
+	100%	{margin-top: 0;}
+}
+@keyframes change {
+	0%		{margin-top: 0;}
+	15%		{margin-top: 0;}
+	25%		{margin-top: -40px;}
+	40%		{margin-top: -40px;}
+	50%		{margin-top: -80px;}
+	65%		{margin-top: -80px;}
+	75%		{margin-top: -40px;}
+	85%		{margin-top: -40px;}
+	100%	{margin-top: 0;}
+}
+
 .btn {
   display: block;
   width: 150px;
   padding: 8px 0;
   margin: 20px auto;
-  background: #4979ff;
   border-radius: 4px;
-  color: white;
+  color: black;
   text-align: center;
+  margin-top: 30em;
 }
 
-/* .btn1 {
-  display: block;
-  width: 150px;
-  padding: 8px 0;
-  margin: 20px auto;
-  background: #4979ff;
-  border-radius: 4px;
-  color: white;
-  text-align: center;
+.btn:hover {
+  color:#ffffff;
+  background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
+  box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+  7px 7px 20px 0px rgba(0,0,0,.1),
+  4px 4px 5px 0px rgba(0,0,0,.1);
+  transition: all .3s;
+  border: 2px solid transparent;
+  cursor: pointer;
 }
 
-.btn1:hover {
-
-} */
-
-/* .landing_page {
-
-} */
 .btn1{
   display: block;
   width: 150px;
@@ -50,8 +174,9 @@
   line-height: 42px;
   -webkit-perspective: 230px;
   perspective: 230px;
-  color: #ffffff;
+  color: #ffffff
 }
+
 .btn1 span {
   background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
   display: block;
@@ -109,6 +234,27 @@
   transform: rotateX(-90deg);
 }
 
+.btn2 {
+  border: 2px solid black;
+  width: 150px;
+  padding: 10px 10px;
+  margin: 20px auto; 
+  border-radius: 4px;
+  color: black;
+  text-align: center;
+}
+
+.btn2:hover {
+  color:#ffffff;
+  background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
+  box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+  7px 7px 20px 0px rgba(0,0,0,.1),
+  4px 4px 5px 0px rgba(0,0,0,.1);
+  transition: all .3s;
+  border: 2px solid transparent;
+  cursor: pointer;
+}
+
 
 
 .cate_container {
@@ -117,8 +263,6 @@
   flex-wrap: wrap;
   justify-content:space-around; 
   columns: 3 auto;
-  
-  /* position: absolute; */
   
 }
 
@@ -138,8 +282,6 @@ box-sizing: border-box;
 min-height: 200px;
 max-height: 200px;
 line-height: 2.5ex;
-/* background-color: pink; */
-
 
 }
 
@@ -160,9 +302,6 @@ line-height: 2.5ex;
   font-size: 28px;
   margin-bottom: 25px;
   text-align: center;
-  @media screen and (max-width: 560px) {
-    font-size: 22px;
-  }
 }
 
 .question_body {
@@ -174,7 +313,7 @@ line-height: 2.5ex;
 .option_btn {
   width: 46%;
   margin: 0 2% 2%;
-  border: 2px solid transparent;
+  border: 2px solid (--main-text-color);
   border-radius: 4px;
   transition: all ease 0.2s;
   cursor: pointer;
@@ -187,7 +326,13 @@ line-height: 2.5ex;
 }
 
 .option_btn:hover {
-  border-color: var(--main-text-color);
+  color:#ffffff;
+  background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
+  box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+  7px 7px 20px 0px rgba(0,0,0,.1),
+  4px 4px 5px 0px rgba(0,0,0,.1);
+  transition: all .3s;
+  border: 2px solid transparent;
 }
 
 
