--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,22 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
 
 :root {
-  --primary: #166ae8;
+  --primary: black;
 }
 
 body {
   background: #f2f2f2;
   color: #333;
   font-family: "Nunito";
+  
 }
 a {
   color: #333;
   text-decoration: none;
 }
+
+
+
 .content {
   max-width: 960px;
   margin: 0 auto;
+  
 }
+
 nav {
   margin: 10px auto 80px;
   padding: 10px 0;
@@ -29,11 +35,6 @@ nav a {
   margin-left: 12px;
 }
 
-/* nav {
-  margin: 20px auto 40px;
-  display: flex;
-  align-items: center;
-} */
 nav h1 {
   margin-left: 10px;
 }
@@ -48,28 +49,39 @@ nav li {
 }
 nav li.btn {
   padding: 10px 16px;
-  border: 2px solid var(--primary);
-  border-radius: 30px;
+  border: 1px solid var(--primary);
+  border-radius: 4px;
   font-weight: 600;
   color: var(--primary);
   cursor: pointer;
 }
 nav li.btn:hover {
-  color: white;
-  background: var(--primary);
+  color:#ffffff;
+  background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
+  box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+  7px 7px 20px 0px rgba(0,0,0,.1),
+  4px 4px 5px 0px rgba(0,0,0,.1);
+  transition: all .3s;
+  border: 2px solid transparent;
 }
+
 
 nav .logo {
   margin-right: auto;
 }
 
+nav .logo a {
+  font-size: 2rem;
+}
+
 /* footer */
-.footer {
-  text-align: center;
-  padding: 2.5em 0;
-  font-size: 2.25rem;
-  padding: 50px 0;
-  margin-top: 60px;
+.footer { 
+text-align: center;
+padding: 2.5em 0;
+font-size: 2.25rem;
+padding: 50px 0;
+margin-top: 60px;
+
 
 }
 
@@ -100,7 +112,7 @@ h3 {
 footer p {
   display: block;
   text-align: center;
-  font-size: 0.6em;
+  font-size: 0.5em;
   color: #777
 }
 
@@ -116,7 +128,8 @@ footer p {
 }
 
 .content-table thead tr {
-  background-color:  #166ae8;
+  /* background-color:  rgba(2,126,251,1); */
+  background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
   color: #ffffff;
   text-align: left;
   font-weight: bold;
@@ -136,7 +149,17 @@ footer p {
 }
 
 .content-table tbody tr:last-of-type {
-  border-bottom: 2px solid  #166ae8;
+  border-bottom: 2px solid  rgba(2,126,251,1);
+}
+
+.story-container {
+  /* border: 1px solid red; */
+  padding: 4.5rem;
+  margin: auto;
+  border-radius: 30px;
+  background-image: linear-gradient(white 45%, transparent), url(../public/cloud.jpg);
+  background-size: cover;
+  box-shadow: 0 30px 40px rgba(0,0,0,.1);
 }
 
 
