--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,19 @@ a {
   text-decoration: none;
 }
 
-
-
 .content {
   max-width: 960px;
   margin: 0 auto;
   
+}
+
+video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+
 }
 
 nav {
