--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -235,12 +235,12 @@
 }
 
 .btn2 {
-  border: 2px solid black;
+  border: 2px solid var(--primary);
   width: 150px;
   padding: 10px 10px;
   margin: 20px auto; 
   border-radius: 4px;
-  color: black;
+  color: var(--primary);
   text-align: center;
 }
 
