--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,12 +6,12 @@
 
 body {
   background: #f2f2f2;
-  color: #333;
+  color: #ffffff;
   font-family: "Nunito";
   
 }
 a {
-  color: #333;
+  color: #ffffff;
   text-decoration: none;
 }
 
@@ -38,6 +38,7 @@ nav {
   align-items: flex-end;
   border-bottom: 1px solid #ddd;
   flex-wrap: wrap;
+  color: #ffffff;
 }
 nav a {
   margin-left: 12px;
@@ -121,22 +122,22 @@ footer p {
   display: block;
   text-align: center;
   font-size: 0.5em;
-  color: #777
+  color: var(--primary)
 }
 
 
 .content-table {
   border-collapse: collapse;
-  margin: 25px 0;
+  margin: 50px 0;
   font-size: 0.9em;
   min-width: 400px;
   border-radius: 5px 5px 0 0;
   overflow: hidden;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 1);
 }
 
 .content-table thead tr {
-  /* background-color:  rgba(2,126,251,1); */
+  background-color:  rgba(2,126,251,1);
   background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
   color: #ffffff;
   text-align: left;
@@ -165,9 +166,9 @@ footer p {
   padding: 4.5rem;
   margin: auto;
   border-radius: 30px;
-  background-image: linear-gradient(white 45%, transparent), url(../public/cloud.jpg);
+  background: linear-gradient(transparent);
   background-size: cover;
-  box-shadow: 0 30px 40px rgba(0,0,0,.1);
+  box-shadow: 0 30px 40px rgba(0,0,0,.7);
 }
 
 
